2004-08-27  Keith Seitz  <keiths@redhat.com>

	* IOpcontrolProvider.java (setupDaemon): Remove ArrayList parameter: use
	OprofileDaemonOptions and OprofileDaemonEvent for setup.
	* IOpxmlProvider.java (debugInfo): SampleFile is gone. Use ProfileImage.
	* ISample.java: Remove.
	* ISampleContainer.java: Remove ISample.
	(setExecutableName): Remove.
	(getEvent): Remove.
	(getSampleCount): Add from ISample.
	* OpInfo.java (SortEventComparator): Sort by event name now, not number.
	(SearchEventComparator): Likewise for search.
	(getEvents): Clarify use of -1 to get all events on all counters.
	(findEvent): Remove counter and event numbers. Search for string name of
	event.
	* Oprofile.java (_DEFAULT_SESSION_NAME): New constant.
	(getEvents): Clarify use of -1 to get all events on all counters.
	(sampleFileCounter): Remove.
	(getDebugInfo): SampleFile is gone. Use ProfileImage.
	(findEvent): Remove counter and event numbers. Search for name of event.
	(isSeparateSampleFile): Remove.
	(isDefaultSession): New static method.
	* OprofileDaemonEvent.java: New class.
	* OprofileDaemonOptions.java: New class.
	* ProfileImage.java: Previously SampleFile.java. Remove all occurences
	of counters and event numbers.
	(getSampleFile): New method.
	(setSampleFile): New method.
	* Sample.java: Change all occurences of SampleFile to ProfileImage.
	* SampleContainer.java (_counter): Remove.
	(_demangled_name): Remove.
	(_containers): Change to ArrayList.
	(SampleContainer): Remove counter argument.
	Initialize ArrayList.
	(getExecutableName): Return the filename of the File.
	(getSampleContainers): Convert ArrayList into fixed array.
	(setSampleContainers): Remove.
	(addSampelContainer): New method.
	(getCounter): Remove.
	* SampleFile.java: Renamed to ProfileImage.java to avoid confusion with
	OProfile's real samplefiles. They're different data models entirely.
	* SampleFileFilter.java: Remove.
	* SampleSession.java (SampleSession): Remove counter parameter.